tests/testcases/invalid/lexical/10_bad_octal_escape_in_string.ciel
int main() {
    char* s = "\89"; // bad octal escape (8 and 9 not allowed)
    return 0;
}
